force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/clofor_com_cfs__LoanRepayment__c.object-meta.xml
<CustomObject>
    <label>Loan Pay</label>
    <nameField>
        <displayFormat>LNR-{000000}</displayFormat>
        <label>LOAN PAYMENT ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Loan Pay</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>