force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/fields/clofor_com_cfs__BankAccountLR__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__BankAccountLR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BANK ACCOUNT-L/R</label>
    <referenceTo>clofor_com_cfs__BankAccount__c</referenceTo>
    <relationshipName>BankAccountLR</relationshipName>
    <type>Lookup</type>
</CustomField>