force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/fields/clofor_com_cfs__LoanRepaymentCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoanRepaymentCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOAN REPAYMENT CREDIT ACCOUNTING CODE</label>
    <referenceTo>clofor_com_cfs__Accounting_Code__c</referenceTo>
    <relationshipName>LoanRepaymentCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>