force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/fields/clofor_com_cfs__RepaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RepaymentAmount__c</fullName>
    <label>REPAYMENT AMOUNT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>