force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/fields/clofor_com_cfs__RepaymentAmountFCY__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RepaymentAmountFCY__c</fullName>
    <label>REPAYMENT AMOUNT(FCY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>