force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/fields/clofor_com_cfs__TotalAmountOfLoanRepayment__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TotalAmountOfLoanRepayment__c</fullName>
    <label>TOTAL AMOUNT OF LOAN REPAYMENT(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>