force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/fields/clofor_com_cfs__UnpaidBalanceOfLR__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__UnpaidBalanceOfLR__c</fullName>
    <label>UNPAID BALANCE OF L/R(LOCAL)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>