force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/recordTypes/clofor_com_cfs__LoanRepayFCY.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LoanRepayFCY</fullName>
    <active>true</active>
    <label>Loan Repayment-FCY</label>
</RecordType>