force-app/main/default/objects/clofor_com_cfs__LoanRepayment__c/recordTypes/clofor_com_cfs__LoanRepayLocal.recordType-meta.xml
<RecordType>
    <fullName>clofor_com_cfs__LoanRepayLocal</fullName>
    <active>true</active>
    <label>Loan Repayment-Local</label>
</RecordType>